[project]
name = "darbiadev-hermes"
version = "0.4.0"
description = "Shipping tooling"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.0",
    "darbiadev-shipping-types>=0.4.0",
    "typer>=0.12.5",
    "rich>=13.9.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]

[project.urls]
repository = "https://github.com/darbiadev/hermes/"
documentation = "https://docs.darbia.dev/hermes/"

[project.scripts]
hermes = "hermes.cli.main:app"

[project.optional-dependencies]
dev = [
    "nox>=2024.4.15",
    "pre-commit>=3.7.1",
    "ruff>=0.5.2",
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.3.241009",
]
docs = [
    "sphinx>=7.4.4",
    "furo>=2024.5.6",
    "sphinx-autoapi>=3.1.2",
    "releases>=2.1.1",
]
tests = [
    "pytest>=8.2.2",
    "pytest-randomly>=3.15.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = [
    "hermes",
]
